--- a/chest_xray_segmentation_lungs.ipynb
+++ b/chest_xray_segmentation_lungs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chest xray segmentation lungs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMaVeB0J8oy6DgRv5GR/hm2",
+      "authorship_tag": "ABX9TyO9fOl0sLxgFH4kE4vDLf7t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,7 +404,7 @@
       },
       "source": [
         "metrics=accuracy_mask\n",
-        "wd=1e-2"
+        "wd=1e-2    # wd = weight decay"
       ],
       "execution_count": 0,
       "outputs": []
@@ -417,7 +417,7 @@
         "colab": {}
       },
       "source": [
-        "learn = unet_learner(data, models.resnet18, metrics=[accuracy_mask],wd=wd,bottle=True)"
+        "learn = unet_learner(data, models.resnet18, metrics = [accuracy_mask], wd = wd, bottle=True, model_dir = '/content/')"
       ],
       "execution_count": 0,
       "outputs": []
